# pje_headless

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  go.mod  go.sum  pje_auth.py  pyproject.toml
cmd/pjeheadless/: main.go
internal/audit/: audit.go  audit_test.go
internal/browser/: browser.go  browser_test.go  capture.go  capture_test.go  config.go  config_test.go  jsstring.go  jsstring_test.go  session.go  session_test.go  stub_test.go  totp.go  totp_enroll.go  totp_enroll_test.go  totp_test.go  url.go  url_test.go  url_track_test.go
internal/config/: config.go  config_test.go
internal/grpclogin/: server.go  server_test.go
internal/grpcsigner/: server.go  server_test.go
internal/loginpb/: login.pb.go  login_grpc.pb.go
internal/loginsvc/: jwt.go  jwt_test.go  manager.go  manager_test.go
internal/pjeoffice/: export_test.go  server.go  server_test.go
internal/signer/: dual.go  dual_test.go  pfx.go  pfx_test.go  pkcs11.go  pkcs11_e2e_test.go  pkcs11_test.go  pkipath.go  pkipath_test.go  remote.go  remote_test.go  signer.go
internal/signerpb/: signer.pb.go  signer_grpc.pb.go
proto/: gen.sh  login.proto  signer.proto
